tests/stable/stable-only/compile_fail/unnamed_fn.stderr
error: unable to determine at compile time which function is being called

  = help: use a direct path to the function instead

  --> $DIR/unnamed_fn.rs:11:5
   |
11 |     fn_array[0]();
   |     ^^^^^^^^^^^^^

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/unnamed_fn.rs:11:5
   |
3  |   #[pre("precondition")]
   |  _______-
4  | | fn foo() {}
   | |___________- defined here
...
11 |       fn_array[0]();
   |       ^^^^^^^^^^^-- supplied 0 arguments
   |       |
   |       expected 1 argument
